[gd_scene load_steps=9 format=3 uid="uid://bq66k3la0er8b"]

[ext_resource type="Script" uid="uid://c0yyrn5g4xhml" path="res://crab_game/crab_game.gd" id="1_her5s"]
[ext_resource type="PackedScene" uid="uid://crpukwr6khuic" path="res://crab_game/crab.tscn" id="2_her5s"]

[sub_resource type="Animation" id="Animation_her5s"]
resource_name = "wave_animation"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 152), Vector2(1152, 520)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 496), Vector2(0, 128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 76), Vector2(576, 260)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 152), Vector2(1152, 520)]
}

[sub_resource type="Animation" id="Animation_jwypb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 148)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 496)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 260)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 520)]
}

[sub_resource type="Animation" id="Animation_2dtjg"]
resource_name = "wave_retract_animation"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 520), Vector2(1152, 152)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 128), Vector2(0, 496)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 260), Vector2(576, 76)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 520), Vector2(1152, 152)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2dtjg"]
_data = {
&"RESET": SubResource("Animation_jwypb"),
&"wave_animation": SubResource("Animation_her5s"),
&"wave_retract_animation": SubResource("Animation_2dtjg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7abox"]
size = Vector2(1152, 520)

[sub_resource type="LabelSettings" id="LabelSettings_jwypb"]
font_size = 64

[node name="CrabGame" type="Node2D"]
script = ExtResource("1_her5s")

[node name="Sand" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.89411765, 0.83137256, 0.58431375, 1)

[node name="Crab" parent="." node_paths=PackedStringArray("spawn_point") instance=ExtResource("2_her5s")]
position = Vector2(456, 72)
spawn_point = NodePath("../CrabSpawnPoint")

[node name="Water" type="ColorRect" parent="."]
offset_top = 496.0
offset_right = 1152.0
offset_bottom = 644.0
color = Color(0.49803922, 1, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Water"]
libraries = {
&"": SubResource("AnimationLibrary_2dtjg")
}
autoplay = "wave_animation"

[node name="Area2D" type="Area2D" parent="Water"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/Area2D"]
position = Vector2(576, 260)
shape = SubResource("RectangleShape2D_7abox")

[node name="CrabSpawnPoint" type="Marker2D" parent="."]
position = Vector2(576, 64)

[node name="LossScreen" type="ColorRect" parent="."]
visible = false
offset_left = 264.0
offset_top = 128.0
offset_right = 880.0
offset_bottom = 504.0
color = Color(0, 1, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="LossScreen"]
layout_mode = 0
offset_right = 616.0
offset_bottom = 376.0

[node name="VBoxContainer" type="VBoxContainer" parent="LossScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LossScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU LOSE :("
label_settings = SubResource("LabelSettings_jwypb")

[node name="RetryButton" type="Button" parent="LossScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="BackButton" type="Button" parent="."]
offset_left = 1032.0
offset_top = 24.0
offset_right = 1123.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 32
text = "BACK"

[connection signal="animation_finished" from="Water/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Water/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="LossScreen/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
